# whaleconnect

./: .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  .swiftformat  CITATION.cff  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Doxyfile.in  README.md  conanfile.py  vcpkg.json  xmake.lua
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: build-all-os.yml  build-debug.yml  build-linux.yml  build-macos.yml  build-windows.yml  clang-format-check.yml  publish-release.yml  update-deps-list.yml
core/: CMakeLists.txt  CMakeSettings.json  terminal.sln  terminal.vcxproj  terminal.vcxproj.filters
core/cmake/: utf_8.cmake
core/lib/: CMakeLists.txt  download_all.py  download_magic_enum.py  download_unifont.py
core/lib/unifont/: README.txt
core/src/: main.cpp
core/src/app/: mainhandle.cpp  mainhandle.hpp  settings.hpp
core/src/async/: async.cpp  async.hpp  asyncfunction.hpp  task.hpp
core/src/gui/: connwindow.cpp  connwindow.hpp  connwindowlist.cpp  connwindowlist.hpp  console.cpp  console.hpp
core/src/net/: btutils.cpp  btutils.hpp  sockets.cpp  sockets.hpp
core/src/sys/: error.cpp  error.hpp  filesystem.cpp
core/src/util/: formatcompat.hpp  imguiext.cpp  imguiext.hpp  strings.cpp  strings.hpp
docs/: BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  EXTENSIONS.md  KEEP_THIS_DIRECTORY  MIT_LICENSE.txt  README.md  SCREENSHOTS.md  SOFTWARE.md  TODO.txt  benchmarks.md  building.md  changelog.md  dependencies.md  readme.md  requirements.md  testing.md  todo.txt  usage.md
download/: fonts.lua  licenses.lua
main/: CMakeLists.txt  terminal.sln  terminal.vcxproj  terminal.vcxproj.filters
main/cmake/: debug_macros.cmake
main/src/: README.md  btutil.cpp  btutil.hpp  btutils.cpp  btutils.hpp  coreutils.cpp  coreutils.hpp  error.cpp  error.hpp  errorlist.cpp  formatcompat.hpp  imguiext.cpp  imguiext.hpp  main.cpp  mainhandle.cpp  mainhandle.hpp  searchbt.cpp  searchbt.hpp  sockets.cpp  sockets.hpp  uicomp.cpp  uicomp.hpp  util.hpp  winutf8.cpp  winutf8.hpp
main/src/app/: mainhandle.cpp  mainhandle.hpp  settings.hpp
main/src/error_gen/: README.md  errorlist.jsonc  generate_error_list_cpp.py
main/src/gui/: connwindow.cpp  connwindow.hpp  connwindowlist.cpp  connwindowlist.hpp  console.cpp  console.hpp
main/src/net/: btutils.cpp  btutils.hpp  errorlist.cpp  sockets.cpp  sockets.hpp
main/src/net/error_gen/: README.md  errorlist.jsonc  generate_error_list_cpp.py
main/src/util/: asyncfunction.hpp  formatcompat.hpp  imguiext.cpp  imguiext.hpp  strings.cpp  strings.hpp  stringutils.cpp  stringutils.hpp  winutf8.cpp  winutf8.hpp
paper/: paper.bib  paper.md
res/: Info.plist  Info.plist.in  app.rc  app.rc.in  dpi-aware.manifest
res/icons/: app.icns
scripts/: generate_deps_list.py  get_latest_changes.py  xmake_utils.py
src/: Info.plist  config.h.in  main.cpp  module.modulemap
src/app/: app.cpp  app.hpp  app.mpp  appcore.cpp  appcore.hpp  appcore.mpp  config.hpp.in  config.mpp.in  fs.cpp  fs.hpp  mainhandle.cpp  mainhandle.hpp  settings.cpp  settings.hpp  settings.mpp
src/async/: async.cpp  async.hpp  task.hpp
src/compat/: format.hpp  outptr.hpp
src/components/: connserverwindow.cpp  connserverwindow.mpp  connwindow.cpp  connwindow.hpp  connwindow.mpp  console.cpp  console.hpp  console.mpp  ioconsole.cpp  ioconsole.hpp  ioconsole.mpp  sdpwindow.cpp  sdpwindow.hpp  sdpwindow.mpp  serverwindow.cpp  serverwindow.hpp  serverwindow.mpp  textselect.cpp  textselect.mpp  window.hpp  window.mpp  windowlist.hpp  windowlist.mpp
src/core/: newconnbt.cpp  newconnbt.hpp  newconnip.cpp  newconnip.hpp
src/delegates/: bidirectional.hpp  bidirectional_linux.cpp  bidirectional_macos.cpp  bidirectional_macos.mm  bidirectional_macos_bt.mm  bidirectional_windows.cpp  client.hpp  client_linux.cpp  client_macos.cpp  client_macos.mm  client_macos_bt.mm  client_windows.cpp  closeable.hpp  closeable_linux.cpp  closeable_macos.cpp  closeable_macos.mm  closeable_windows.cpp  connserver.hpp  connserver_linux.cpp  connserver_macos.cpp  delegates.hpp  noops.hpp  server.hpp  server_linux.cpp  server_macos.cpp  server_windows.cpp  sockethandle.hpp  sockethandle_linux.cpp  sockethandle_macos.cpp  sockethandle_macos.mm  sockethandle_windows.cpp  traits.hpp
src/gui/: about.cpp  about.hpp  about.mpp  app.cpp  app.hpp  app.mm  appcore.cpp  appcore.mpp  connwindow.cpp  connwindow.hpp  connwindowlist.cpp  connwindowlist.hpp  console.cpp  console.hpp  console.mpp  imguiext.cpp  imguiext.hpp  imguiext.mpp  ioconsole.cpp  ioconsole.mpp  menu.cpp  menu.hpp  menu.mpp  menu.state.hpp  newconn.cpp  newconn.hpp  newconn.mpp  newconnbt.cpp  newconnbt.hpp  newconnbt.mpp  newconnip.cpp  newconnip.hpp  newconnip.mpp  newserver.cpp  newserver.hpp  newserver.mpp  notifications.cpp  notifications.hpp  notifications.mpp  sdpwindow.cpp  (+8 more)
src/net/: bthandle.mm  btutils.cpp  btutils.hpp  btutils.internal.cpp  btutils.internal.hpp  btutils.internal.mpp  btutils.linux.cpp  btutils.macos.cpp  btutils.mpp  btutils.windows.cpp  btutils_internal.hpp  btutils_linux.cpp  btutils_macos.mm  btutils_windows.cpp  device.hpp  device.mpp  enums.hpp  enums.mpp  netutils.cpp  netutils.hpp  netutils.mpp  sockethandle.hpp  sockets.cpp  sockets.hpp
src/objc/: bthandle.h  bthandle.mm  btutils_bridge.cpp  btutils_bridge.hpp  btutils_bridge.mm  cpp_objc_bridge.cpp  cpp_objc_bridge.hpp  cpp_objc_bridge.mm
src/os/: async.bluetooth.hpp  async.cpp  async.hpp  async.internal.mpp  async.linux.cpp  async.macos.cpp  async.mpp  async.windows.cpp  async_internal.hpp  async_linux.cpp  async_linux.hpp  async_macos.cpp  async_macos.hpp  async_windows.cpp  async_windows.hpp  bluetooth.cpp  bluetooth.hpp  btutils.hpp  btutils_internal.hpp  btutils_linux.cpp  btutils_macos.mm  btutils_windows.cpp  check.hpp  errcheck.hpp  errcheck.mpp  error.cpp  error.hpp  fn.hpp  (+11 more)
stdcompat/: README.txt
swift/: Package.swift
unifont/: OFL-1.1.txt  README.txt
xmake/: download.lua  generate_deps_list.py  parse_lock_file.lua  swift_settings.lua
(+219 files in other folders)
